# app/Http/Controllers/Api/ApiOrderController.php
@@ -69,10 +69,6 @@ class ApiOrderController extends Controller
                     ),
                      @OA\Property(property="longitude", type="string"),
                      @OA\Property(property="latitude", type="string"),
-                     @OA\Property(property="kode_kurir", type="string"),
-                     @OA\Property(property="service", type="string"),
-                     @OA\Property(property="description_service", type="string"),
-                     @OA\Property(property="etd", type="string"),
                      @OA\Property(property="total_berat_item", type="integer"),
                      @OA\Property(property="total_harga_all_item", type="integer"),
                      @OA\Property(property="cost_shipping", type="integer"),
@@ -83,10 +79,6 @@ class ApiOrderController extends Controller
                     type="object",
                     @OA\Property(property="company", type="integer"),
                     @OA\Property(property="courier_service_code", type="string"),
-                    @OA\Property(property="no_telephone", type="integer"),
-                    @OA\Property(property="email", type="integer"),
-                    @OA\Property(property="detail_alamat_user", type="string"),
-                    @OA\Property(property="postal_code", type="string"),
                         
                 ),
              ),
